--- a/pincherx_100_ros2/package.xml
+++ b/pincherx_100_ros2/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>pincher_x100_ros2</name>
+  <name>pincherx_100_ros2</name>
   <version>2.2.0</version>
   <description>
     ROS 2 packages for Trossen's PincherX 100 Arm.
